force-app/main/default/objects/LLC_BI__Onboarding__c/fields/LLC_BI__Account__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Account__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>Reference to the Account that is associated with the onboarding case.</description>
    <label>Relationship</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Onboarding Cases</relationshipLabel>
    <relationshipName>Onboarding</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>