force-app/main/default/objects/LLC_BI__Onboarding__c/fields/LLC_BI__Complete_DateTime__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Complete_DateTime__c</fullName>
    <description>The date/time the case was closed.</description>
    <label>Complete Date/Time</label>
    <type>DateTime</type>
</CustomField>