force-app/main/default/objects/LLC_BI__Onboarding__c/fields/LLC_BI__Parent_Onboarding_Case__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Parent_Onboarding_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the primary onboarding case that resulted in this additional onboarding case being created.</description>
    <label>Parent Onboarding Case</label>
    <referenceTo>LLC_BI__Onboarding__c</referenceTo>
    <relationshipName>Onboarding</relationshipName>
    <type>Lookup</type>
</CustomField>