force-app/main/default/objects/LLC_BI__Onboarding__c/fields/LLC_BI__Product_Line__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference of the Product Line being applied for (if applicable)</description>
    <label>Product Line</label>
    <referenceTo>LLC_BI__Product_Line__c</referenceTo>
    <relationshipLabel>Onboarding Cases</relationshipLabel>
    <relationshipName>Onboarding_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>