force-app/main/default/objects/LLC_BI__Onboarding__c/fields/LLC_BI__Product_Package__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the associated product package (if applicable).</description>
    <label>Product Package</label>
    <referenceTo>LLC_BI__Product_Package__c</referenceTo>
    <relationshipLabel>Onboarding Cases</relationshipLabel>
    <relationshipName>Onboarding_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>