force-app/main/default/objects/LLC_BI__Onboarding__c/fields/LLC_BI__Started_DateTime__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Started_DateTime__c</fullName>
    <description>The date/time the case was moved into progress.</description>
    <label>Started Date/Time</label>
    <type>DateTime</type>
</CustomField>