force-app/main/default/objects/LLC_BI__Onboarding__c/fields/LLC_BI__Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Type__c</fullName>
    <description>Onboarding journey type</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NewCustomer</fullName>
                <label>New Customer</label>
            </value>
            <value>
                <fullName>NewProduct</fullName>
                <label>New Product</label>
            </value>
            <value>
                <fullName>KybAndKycOnly</fullName>
                <label>KYB/KYC Only</label>
            </value>
            <value>
                <fullName>RiskAssessmentOnly</fullName>
                <label>Risk Assessment Only</label>
            </value>
            <value>
                <fullName>AmendMandate</fullName>
                <label>Amend Mandate</label>
            </value>
            <value>
                <fullName>SmallBusiness</fullName>
                <label>Small Business</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>